hidding api key

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /gpt-webapp.core/.project
 /gpt-webapp.core/.settings/
 
-/gpt-webapp/gpt-webapp.core/src/main/resources/api.keys.properties
+/gpt-webapp.core/src/main/resources/api.keys.properties
 
 /gpt-webapp.persistence/target/
 /gpt-webapp.persistence/.classpath
