--- a/gpt-webapp.persistence/pom.xml
+++ b/gpt-webapp.persistence/pom.xml
@@ -40,6 +40,12 @@
         <artifactId>h2</artifactId>
         <version>2.2.220</version>
     </dependency>
+    
+    <dependency>
+    	<groupId>com.fasterxml.jackson.core</groupId>
+    	<artifactId>jackson-databind</artifactId>
+    	<version>2.17.2</version>
+	</dependency>
   </dependencies>
 
   <build>
