--- a/gpt-webapp.web/pom.xml
+++ b/gpt-webapp.web/pom.xml
@@ -32,6 +32,11 @@
 		<artifactId>gpt-webapp.core</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-security</artifactId>
+	    <version>3.3.4</version>
+	</dependency>
   </dependencies>
 
   <build>
