--- a/gpt-webapp.persistence/src/main/resources/application-dev.properties
+++ b/gpt-webapp.persistence/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gpt-webapp
-spring.datasource.username=postgres
-spring.datasource.password=toor
+spring.datasource.url=jdbc:postgresql://localhost:5432/gpt-webapp_db
+spring.datasource.username=gpt_user
+spring.datasource.password=RootDragonBallZ001811.
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
