--- a/gpt-webapp.web/pom.xml
+++ b/gpt-webapp.web/pom.xml
@@ -12,8 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -41,6 +41,16 @@
 		<plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+				<mainClass>org.gpt.webapp.web.WebApp</mainClass>
+			</configuration>
+			<executions>
+		        <execution>
+		            <goals>
+		                <goal>repackage</goal>
+		            </goals>
+		        </execution>
+		    </executions>
         </plugin>
 		<plugin>
 			<artifactId>maven-compiler-plugin</artifactId>
@@ -51,9 +61,6 @@
 	          <source>17</source>
 	          <target>17</target>
 	        </configuration>
-		</plugin>
-		<plugin>
-			<artifactId>maven-war-plugin</artifactId>
 		</plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
