db connection fixed

--- a/gpt-webapp.persistence/src/main/resources/application-dev.properties
+++ b/gpt-webapp.persistence/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gpt-webapp_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/gpt_webapp_db
 spring.datasource.username=gpt_user
 spring.datasource.password=RootDragonBallZ001811.
 spring.datasource.driver-class-name=org.postgresql.Driver
