--- a/gpt-webapp.persistence/src/main/resources/application.properties
+++ b/gpt-webapp.persistence/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.profiles.active=dev
+spring.datasource.url=jdbc:postgresql://localhost:5432/gpt-webapp
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
