--- a/gpt-webapp.web/src/main/resources/application.properties
+++ b/gpt-webapp.web/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port=8080
+server.port=8081
+server.servlet.context-path=/multi-gpt
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gpt-webapp
-spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.url=jdbc:postgresql://localhost:5432/gpt_webapp_db
+spring.datasource.username=gpt_user
+spring.datasource.password=RootDragonBallZ001811.
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
